# troutslapbot-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  slap.cpp  telegram_bot.cc  telegram_bot.h  trout_slap_bot.cc  trout_slap_bot.cpp  trout_slap_bot.h  trout_slap_bot.hpp
src/: CMakeLists.txt  telegram_bot.cc  telegram_bot.h  telegram_exceptions.h  trout_slap_bot.cc  trout_slap_bot.h
